solved navbar bug

--- a/app/components/Navbar/Navbar.scss
+++ b/app/components/Navbar/Navbar.scss
@@ -71,7 +71,9 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    position: relative;
+    position: fixed;
+    top: 10%;
+    right: 10%;
 
     display: flex;
     justify-content: center;
